# missed-optimizations-with-binary-analysis

./: README.md  commands.txt  env_setup.sh  requirements.txt
binary_analysis/: binary_analysis_data_processing.py  binary_analysis_test.py  binary_analysis_utils.py  cfg_binary_analysis.py  combined_binary_analysis.py  compare_reduced_programs.py  constant_global_variables.py  extended_binary_analysis.py  extended_variable_binary_analysis.py  extended_variable_binary_analysis_static.py  path_binary_analysis.py  reduced_program_binary_analysis.py  test_binary_analysis.py  variable_binary_analysis.py  variable_binary_analysis_static.py
bug_reports/: gcc_complex_condition_check.txt  gcc_loop_never_executed.txt  gcc_vectorized_empty_loop.txt
clang_tools/: build_python_wheel_local.sh  setup.py  setup.py.in
clang_tools/src/: CMakeLists.txt  GlobalDetector.cpp  LoopConvert.cpp
data/: GCC_13.2.1_O0_report.txt  GCC_13.2.1_O1_report.txt  GCC_13.2.1_O2_report.txt  GCC_13.2.1_O3_report.txt  LLVM_16.0.6_O0_report.txt  LLVM_16.0.6_O1_report.txt  LLVM_16.0.6_O2_report.txt  LLVM_16.0.6_O3_report.txt  report.txt
data2/: program_10reduced_program_10.c  program_3reduced_program_3.c  program_4reduced_program_4.c  program_8reduced_program_8.c  program_9reduced_program_9.c
diopter/: compiler.py  generator.py
error_programs/: sample_setting2_2.c
evaluation/: GCC_13.2.1_O0_report.txt  GCC_13.2.1_O1_report.txt  GCC_13.2.1_O2_report.txt  GCC_13.2.1_O3_report.txt  GCC_O0_report.txt  GCC_O1_report.txt  GCC_O2_report.txt  GCC_O3_report.txt  LLVM_16.0.6_O0_report.txt  LLVM_O0_report.txt  (+14 more)
(+117913 files in other folders)
